[project]
name = "briefing-agent"
version = "0.1.0"
description = "검증 후 발행(verify-before-publish) 데일리 AI 뉴스 브리핑 — Claude(author) + Codex(certifier) 듀얼 하니스"
requires-python = ">=3.12"
dependencies = [
    "strands-agents",
    "strands-agents-tools",
    "bedrock-agentcore",
    "boto3>=1.35",
    "python-dotenv",
    "pyyaml",            # users/<id>/profile.yaml 파싱
    "feedparser",        # 클린 RSS 출처 파싱
    "trafilatura>=2.1.0",
]

[dependency-groups]
# ruff/pytest = 개발; starter-toolkit = ② 배포(호스트 전용 — 컨테이너 requirements.txt 엔 미포함).
# fastapi/mangum/uvicorn/httpx = ④ webapi(로컬 dev + TestClient). 컨테이너/스케줄러 zip 과 무관.
dev = ["ruff", "pytest", "bedrock-agentcore-starter-toolkit>=0.3",
       "fastapi", "mangum", "uvicorn", "httpx"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briefing"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
